[package]
name = "apollo-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = "1.1"
cosmwasm-schema = "1.1.3"
cw20 = "0.16"
cw-asset = { git="https://github.com/apollodao/cw-asset.git", rev = "5e51773da42ef82faa67576454e8c4b0971097f2" }

[dev-dependencies]
test-case = "2.2.2"
