[package]
name = "apollo-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = "1.1"
cosmwasm-schema = "1.1.3"
cw20 = "0.16"
cw-asset = { git="https://github.com/apollodao/cw-asset.git", branch = "main" }

[dev-dependencies]
test-case = "2.2.2"
